# PyRustor

./: .coveragerc  .cz.toml  .gitignore  CHANGELOG.md  CI_COVERAGE_FIX.md  CI_OPTIMIZATION_SUMMARY.md  Cargo.toml  MACOS_PYTHON39_FIX.md  README.md  README_zh.md  REFACTORING_SUMMARY.md  coverage.json  debug_test.py  justfile  performance_results.json  pyproject.toml  release-please-config.json  validate_fix.py
.github/: CI_ARCHITECTURE.md  branch-protection.md  testing-strategy.md
.github/actions/build-and-test/: action.yml
.github/actions/build-wheel/: action.yml
.github/workflows/: build-abi3.yml  build.yml  ci-optimized.yml  ci.yml  coverage-optimized.yml  coverage.yml  pr-checks.yml  pr-commands.yml  release-please.yml  release.yml  test-macos-python39.yml  test-optimization.yml  version-sync.yml
crates/pyrustor-core/: Cargo.toml
crates/pyrustor-core/src/: ast.rs  (+6 more)
crates/pyrustor-python/: Cargo.toml  pyproject.toml
crates/pyrustor-python/src/: lib.rs
docs/: api_extension_proposal.md  bottom_level_api.md  bottom_up_api_philosophy.md  low_level_api_design.md
examples/: code_simplification_example.py  formatting_integration_example.py  pyupgrade_style_integration.py  user_built_pkg_resources_modernization.py
python/pyrustor/: __init__.py  __init__.py.bak  _pyrustor.pyi
scripts/: auto_version_demo.py  performance_test.py  quality_check.py  sync_versions.py  test_ci_optimization.py  test_wheel_integrity.py
tests/: conftest.py  test_api_compatibility.py  test_basic.py  test_benchmarks.py  test_bottom_level_api.py  test_code_simplification.py  test_directory_operations.py  test_edge_cases_comprehensive.py  test_error_handling.py  test_file_operations.py  test_formatting_integration.py  test_integration.py  test_low_level_api_design.py  test_parser.py  test_parser_comprehensive.py  test_performance_and_edge_cases.py  test_pkg_resources_modernization.py  test_real_file_samples.py  test_real_world_files.py  test_refactor.py  test_refactor_comprehensive.py
tests/data/: legacy_data_science.py  legacy_django_model.py  legacy_flask_app.py  legacy_pkg_resources_example.py
(+13 files in other folders)
